[package]
name = "centralex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.24.2", features = ["macros", "rt-multi-thread", "net", "io-util", "sync", "time"] }
anyhow = { version = "1.0.68", features = ["backtrace"] }
bytemuck = { version = "1.13.0", features = ["derive"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
hyper = { version = "0.14.24", optional = true, features = ["server", "http1", "tcp"] }
futures = { version = "0.3.27", default-features = false, features = ["std"] }
console-subscriber = {  version = "0.1.8", optional = true }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["time"] }
time = { version = "0.3.20", features = ["local-offset", "macros"] }
once_cell = "1.17.1"

[features]
default = ["debug_server", "tokio_console"]
debug_server = ["dep:hyper"]
tokio_console = ["dep:console-subscriber"]
